--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_nstu_info_details">NstuInfoDetails</string>
-    <string name="uniname">Noakhali Science And Technology University</string>
+    <string name="uniname">Noakhali Science And Technology\n University</string>
     
 
 </resources>
