--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_nstu_info_details">NstuInfoDetails</string>
     <string name="uniname">Noakhali Science And Technology\n University</string>
-    
+     <string name="id_ads">ca-app-pub-1505016841070170/6383568243</string>
 
 </resources>
