--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">nstuinfo</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_detaitls">Detaitls Activity</string>
+    <string name="title_activity_image_view">Image View</string>
 </resources>
