Change Directory Optimize code and Make Menu Option Test For Local AD

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">NSTUinfo 2016</string>
-    <string name="action_settings">About</string>
+    <string name="action_settings">Settings</string>
+    <string name="about">About</string>
+    <string name="clear">Clear Cache</string>
     <string name="title_activity_detaitls">Detaitls Activity</string>
     <string name="title_activity_image_view">Image View</string>
 
