--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NSTUinfo</string>
+    <string name="app_name">NSTUinfo (Test)</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_second">SecondActivity</string>
 
